Version 3.9.101dev:

* Fixed crash in nname_to_aname [PowderedToastMan].
* New option video_driver (can be sdl or null).
* Configure flags --disable-jit and --disable-x86 must no longer be specified
  for ARM builds, they will be automatically disabled.
* macOS: Only use -pagezero_size for x86_64 (Fixes builds for M1 hardware).

Version 3.9.100dev:

* Warning: This is a work in progress.
* Several features from FS-UAE 3.x are still missing (TODO: List them).
* FIXME: The changelog for this version is incomplete.
* New built-in slirp implementation from QEMU 5.2.0 and reworked the slirp
  support in FS-UAE. Fixes random crashes and corrupt network data.
* fs-uae-device-helper now goes into libexec, not bin.
* Add Midi Support to FS-UAE using the PortMidi library [cnvogelg].
* Support for F13-F19 keys on Apple Extended keyboard [immutable].
* Better clipboard sharing integration.
* New fsemu backend (work in progress).
* Experimental floppy file picker dialogs (--enable-libnfd).
* New shortcut Mod+F9 to toggle between chipset and RTG display.
* Bridgeboard & VGA available and works with custom uae_* options.
* Fixed mouse integration.
* Only do LF <-> CRLF clipboard conversion on Windows [BastyCDGS].
* Console debugger can be used also in Windows.
* Lots of fixes to restore functionality after the merge.
* Updated emulation core from WinUAE 4210 (big merge).

Version 3.0.0dev:

* Show error during configure if OpenAL is not found.
* More controller configs.
* Imported updated translations from crowdin.com.

Version 2.9.12dev:

* Added controller config for DualShock 4 v2.
* Change default for bezel option to 0 (off).

Version 2.9.11dev:

* Linux: Automatically uses (Feral Interactive) GameMode daemon if available.
* New option game_mode = 0 to disable above mentioned feature.
* Linux: Warn if running with a CPU governor other than performance.
* New option governor_warning = 0 to to disable above mentioned warning.
* Fixed support for multiple mice also on Windows.
